Adding only build and deploy to my circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,6 @@ orbs:
   node: circleci/node@4.1
   heroku: circleci/heroku@1.0.1
   
-jobs:
-  test:
-      executor: node/default
-      steps:
-        - checkout
-        - run:
-            name: install dependencies
-            command: npm install
-        - run:
-            name: tests
-            command: npm run test  
-              
   build:
     executor: node/default
     steps:
@@ -26,10 +14,8 @@ jobs:
 workflows:
   build-test-deploy:
     jobs:
-      - test
-      - build:
-          requires:
-            - test
+      
+      - build
       - heroku/deploy-via-git:
           requires:
             - build
