renaming my workflow to build-deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ orbs:
       - node/install-packages
             
 workflows:
-  build-test-deploy:
+  build-deploy:
     jobs:
       
       - build
