--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,8 @@ jobs:
 workflows:
   build-test-deploy:
     jobs:
-      - test
-      - build:
-          requires:
-            - test
+      - build
+
       - heroku/deploy-via-git:
           requires:
             - build
