changing deploy filte branch to only QuestionsAndAnswers

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,6 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - QuestionsAndAnswers
 
                 
