--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2.1
 
+
 orbs:
-  node: circleci/node@4.1
+  node: circleci/node@3.0.1
   heroku: circleci/heroku@1.0.1
 
 jobs:
@@ -12,7 +13,7 @@ jobs:
       - node/install-packages
 
 workflows:
-  build-test-deploy:
+  build-deploy:
     jobs:
       - build
       - heroku/deploy-via-git:
