--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.2",
-    "web-vitals": "^1.1.2"
+    "web-scraper": "^1.0.10",
+    "web-vitals": "^1.1.2",
+    "website-scraper": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
